[gd_scene load_steps=2 format=3 uid="uid://bhnxqi7hgoe7b"]

[ext_resource type="Script" path="res://GameModeSelector.gd" id="1_2x3y"]

[node name="GameModeSelector" type="HBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("1_2x3y")

[node name="EnglishPronounModeButton" type="Button" parent="."]
layout_mode = 2
text = "Level 1-1: English Pronouns"
toggle_mode = true
button_pressed = true

[node name="SpanishPronounModeButton" type="Button" parent="."]
layout_mode = 2
text = "Level 1-2: Spanish Pronouns"
toggle_mode = true

[node name="SentenceModeButton" type="Button" parent="."]
layout_mode = 2
text = "Level 3: Sentence Completion"
toggle_mode = true
